Vertically align buttons correctly

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -139,7 +139,7 @@ header
       padding 0
       font-family inherit
       cursor pointer
-
+      vertical-align top
       &.text
         font-size 12px
         text-transform uppercase
